# song-procesor

./: CMakeLists.txt  README.md  main.cpp
include/: song_processor.hpp
include/audio/: audio_loader.hpp  audio_writer.hpp
include/effects/: compressor.hpp  echo.hpp  reverb.hpp
include/signal/: fft.hpp  filter.hpp  spectrum_analyzer.hpp
include/utils/: audio_utils.hpp  math_utils.hpp
src/audio/: audio_loader.cpp  audio_writer.cpp
src/signal/: filter.cpp
src/utils/: audio_utils.cpp  math_utils.cpp
